# clinic_report

./: .gitignore  README.md  func.md  package-lock.json  package.json  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
data_extractor/: pdf_extractor.py  run_all.py  tricho_analyzer.py
hotkey/: pdf出力.bat  アプリ再起動.bat  最後の患者のレポート出力.bat
init_setter/: autogui.py  autosetting.py
powershell/: newest_file_getter.ps1  newest_folder_getter.ps1
report_template/: render.js  report_maker.py  report_template.html
sample_data/4B1C3482-AD7A-4A7B-8B8A-1E1FF4DA1D25/: captureinfo_scope  global_superior.json  tricho_0.json  tricho_0_input.json  tricho_1.json  tricho_1_input.json  tricho_2.json  tricho_2_input.json  tricho_3.json  tricho_3_input.json  worklist.ini
sample_data/735170E1-85B7-4444-8954-0578987887A8/: captureinfo_scope  tricho_0.json  tricho_0_input.json  tricho_1.json  tricho_1_input.json  tricho_2.json  tricho_2_input.json  tricho_3.json  tricho_3_input.json  worklist.ini
sample_data/ini/: Sculptor.ini
sample_data/json/: data.json  tricho_0.json  tricho_1.json  tricho_2.json  tricho_3.json  tricho_data_viewer.py
website/: homepage.html
workspace/: pyproject.toml  run_latest.py
workspace/diagrams/: package.puml  package_2.puml
workspace/src/tricho_pipeline/: __init__.py
workspace/src/tricho_pipeline/analysis/: tricho_analyzer.py
workspace/src/tricho_pipeline/cli/: main.py
workspace/src/tricho_pipeline/core/: config.py  io_utils.py  node_render.py  orchestrator.py
workspace/src/tricho_pipeline/extraction/: pdf_extractor.py
(+58 files in other folders)
